--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Color Flipper</h1>
     <button id="red" onclick="changeColor('red')">Red</button>
     <button id="blue" onclick="changeColor('skyblue')">blue</button>
-    <button id="green" onclick="changeColor('red')">Green</button>
-    <button id="purple" onclick="changeColor('red')">Purple</button>
+    <button id="green" onclick="changeColor('green')">Green</button>
+    <button id="purple" onclick="changeColor('purple')">Purple</button>
     <button id="random" onclick="changeColor('orange')">Orange</button>
     <script src="script.js"></script>
 </body>
